@@ -61,10 +61,13 @@ funcs.keys.sort.each do |version|
   puts "checking for Oracle #{verstr} API - #{result}"
   break if result == 'fail'
 end
-$defs << "-DACTUAL_ORACLE_CLIENT_VERSION=#{format('0x%08x', oci_actual_client_version)}"
 
+have_type('oratext', 'ociap.h')
+have_type('OCIDateTime*', 'ociap.h')
+have_type('OCIInterval*', 'ociap.h')
 have_type('OCICallbackLobRead2', 'ociap.h')
 have_type('OCICallbackLobWrite2', 'ociap.h')
+have_type('OCIAdmin*', 'ociap.h')
 
 if with_config('oracle-version')
   oci_client_version = with_config('oracle-version').to_i
